--- a/src/lib/input/box2/ti-input-box.scss
+++ b/src/lib/input/box2/ti-input-box.scss
@@ -35,7 +35,7 @@
     }
     //---------------------------------------------------
     &.show-tips {
-      position: absolute;
+      position: fixed;
       z-index: $z-mask + 1;
     }
     //---------------------------------------------------
