--- a/src/lib/view/list/ti-list.scss
+++ b/src/lib/view/list/ti-list.scss
@@ -13,7 +13,7 @@
     > main {
       flex: 1 1 auto;
       width: 100%;
-      height: 100%;
+      height: 10px;
       overflow: auto;
     }
   }
