TiTag support sortable

--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -6,7 +6,7 @@
   --ti-color-card-f: #eee;
   --ti-color-menu: #222;
   --ti-color-menu-f: #eee;
-  --ti-color-bar: #111;
+  --ti-color-bar: #444;
   --ti-color-bar-f: #ddd;
   --ti-color-tab: #333;
   --ti-color-tab-f: #ddd;
@@ -17,7 +17,7 @@
   --ti-color-mask-thin: rgba(0, 0, 0, 0.5);
   --ti-color-mask-weak: rgba(0, 0, 0, 0.2);
   /* 边框/线 */
-  --ti-color-border-shallow: #222;
+  --ti-color-border-shallow: #333;
   --ti-color-border-thin: #444;
   --ti-color-border-weak: #666;
   --ti-color-border-dark: #888;
@@ -33,35 +33,35 @@
   /* 内容颜色 */
   --ti-color-primary: #58a6e6;
   --ti-color-primary-b: #67a7db;
-  --ti-color-primary-r: #ecf5fd;
+  --ti-color-primary-r: #00325e;
   --ti-color-secondary: #ff78a5;
   --ti-color-secondary-b: #e783a5;
   --ti-color-secondary-r: #fff;
   --ti-color-success: #4caf50;
   --ti-color-success-b: #5aa55c;
-  --ti-color-success-r: #cfc;
+  --ti-color-success-r: #003100;
   --ti-color-warn: #ff8800;
   --ti-color-warn-b: #ec8f23;
-  --ti-color-warn-r: #ffc;
+  --ti-color-warn-r: #3d3d00;
   --ti-color-info: #00bfbf;
   --ti-color-info-b: #15cece;
-  --ti-color-info-r: #aefcfc;
+  --ti-color-info-r: #005757;
   --ti-color-danger: #f44336;
   --ti-color-danger-b: #e9574d;
   --ti-color-danger-r: #fcc;
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
-  --ti-color-track-r: #fff;
-  --ti-color-disable: #666;
-  --ti-color-disable-b: #666;
-  --ti-color-disable-r: rgba(200, 200, 200, 0.06);
+  --ti-color-track-r: #313131;
+  --ti-color-disable: #797979;
+  --ti-color-disable-b: #868686;
+  --ti-color-disable-r: #555;
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
-  --ti-color-text-r: #ecc4e3;
-  --ti-color-number: #7200cc;
-  --ti-color-number-b: #8520d3;
-  --ti-color-number-r: #cb9fec;
-  --ti-color-tip: #ddd;
-  --ti-color-tip-b: #ccc;
-  --ti-color-tip-r: #222;
+  --ti-color-text-r: #410031;
+  --ti-color-number: #a045e6;
+  --ti-color-number-b: #8733c7;
+  --ti-color-number-r: #310057;
+  --ti-color-tip: #a1a1a1;
+  --ti-color-tip-b: #9b9b9b;
+  --ti-color-tip-r: #2b2b2b;
 }
