--- a/src/lib/tile/tags/ti-tags.scss
+++ b/src/lib/tile/tags/ti-tags.scss
@@ -24,8 +24,8 @@
   }
   > .as-sorting-ghost {
     opacity: 0.5;
-    color: red;
-    background-color: yellow;
+    color: var(--ti-color-highlight-f);
+    background-color: var(--ti-color-highlight);
   }
   > hr {
     opacity: 0;
