--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -6,7 +6,7 @@
   --ti-color-card-f: #000;
   --ti-color-menu: #fff;
   --ti-color-menu-f: #000;
-  --ti-color-bar: #e0e0e0;
+  --ti-color-bar: #d0d0d0;
   --ti-color-bar-f: #888;
   --ti-color-tab: #f0f0f0;
   --ti-color-tab-f: #888;
