--- a/src/lib/tile/tags/ti-tags.scss
+++ b/src/lib/tile/tags/ti-tags.scss
@@ -12,6 +12,7 @@
     }
   }
   > .as-title {
+    @include flex-center;
     font-weight: bold;
     font-size: var(--ti-fontsz-s);
     white-space: nowrap;
