--- a/src/lib/view/table/style/ti-table.scss
+++ b/src/lib/view/table/style/ti-table.scss
@@ -3,15 +3,15 @@
 .ti-table {
   > main {
     position: relative;
-    user-select: none;
     width: 100%;
     height: 100%;
     overflow: auto;
+    user-select: none;
     display: grid;
     grid-template-rows: auto;
     align-items: stretch;
     align-content: flex-start;
-    background-color: var(--ti-color-border-shallow);
+    background-color: var(--ti-color-border-thin);
 
     > .virtual-row {
       background-color: var(--ti-color-card);
