--- a/src/lib/action/actionbar/style/bar-item-info.scss
+++ b/src/lib/action/actionbar/style/bar-item-info.scss
@@ -7,21 +7,21 @@
   gap: 0;
   line-height: var(--ti-measure-menu-lineheight);
   //padding: 0.26em 0.6em;
-  padding: 0;
+  padding: 0 0.2em;
   overflow: hidden;
   //-----------------------------------------------------
   --item-color: var(--ti-color-border-shallow);
   //-----------------------------------------------------
   .item-icon {
     @include flex-center;
-    font-size: var(--ti-measure-menu-iconsz);
-    width: var(--ti-measure-menu-iconsz);
-    margin: 0 0.3em;
+    font-size: 1.2em;
+    width: min-content;
+    margin: 0 0.2em;
   }
   //-----------------------------------------------------
   .item-text {
     white-space: nowrap;
-    padding: 0.2em 0.5em;
+    padding: 0.2em;
     @include flex-align-nowrap($ai: center);
   }
   //-----------------------------------------------------
