--- a/src/lib/tile/label/ti-label.scss
+++ b/src/lib/tile/label/ti-label.scss
@@ -47,6 +47,11 @@
     text-align: var(--box-align);
     line-height: 2em;
     margin: 0;
+    //---------------------------------------------
+    // 后面的元素增加一点间距
+    + .icon-part {
+      margin-left: 0.3em;
+    }
   }
   //-----------------------------------------------
   &.nil-prefix-icon {
