--- a/src/lib/view/lbs-map/ti-lbs-map.scss
+++ b/src/lib/view/lbs-map/ti-lbs-map.scss
@@ -1,11 +1,103 @@
+@use "@site0/tijs/sass/_all.scss" as *;
+
 .ti-lbl-map {
+  user-select: none;
+  position: relative;
+  //-------------------------------------------------------
   > main {
     background-color: var(--ti-color-mask-bushy);
   }
+  //-------------------------------------------------------
   a {
     text-decoration: none;
     &:hover {
       text-decoration: none;
     }
   }
+  //-------------------------------------------------------
+  > .wgl-map-info {
+    @include flex-align($jc: space-between);
+    @include pos-abs($b: 0, $r: 0);
+    @include font-fixed;
+    color: #444;
+    user-select: text;
+    font-size: SZ(12);
+    z-index: $z-mask;
+    padding: 0.4em;
+    //-----------------------------------------------------
+    .info-ele {
+      white-space: nowrap;
+      padding: 0.2em;
+      background: rgba(255, 255, 255, 0.5);
+      > i {
+        display: inline-block;
+        font-size: inherit;
+        vertical-align: middle;
+        width: 1.6em;
+        text-align: center;
+      }
+    }
+    //-----------------------------------------------------
+  }
+  //-------------------------------------------------------
+  .ti-gsi-mark-icon {
+    @include flex-center;
+    line-height: 1em;
+    text-shadow: SZ(2) SZ(2) SZ(5) var(--ti-color-mask-thin);
+    //-----------------------------------------------------
+    &.is-size-16 {
+      font-size: 16px;
+    }
+    &.is-size-24 {
+      font-size: 24px;
+    }
+    &.is-size-32 {
+      font-size: 32px;
+    }
+    &.is-size-48 {
+      font-size: 48px;
+    }
+    &.is-size-64 {
+      font-size: 64px;
+    }
+    &.is-size-96 {
+      font-size: 96px;
+    }
+    &.is-size-128 {
+      font-size: 128px;
+    }
+    //-----------------------------------------------------
+    &.is-color-primary {
+      color: var(--ti-color-primary);
+    }
+    &.is-color-secondary {
+      color: var(--ti-color-secondary);
+    }
+    &.is-color-success {
+      color: var(--ti-color-success);
+    }
+    &.is-color-warn {
+      color: var(--ti-color-warn);
+    }
+    &.is-color-info {
+      color: var(--ti-color-info);
+    }
+    &.is-color-error {
+      color: var(--ti-color-error);
+    }
+    &.is-color-track {
+      color: var(--ti-color-track);
+    }
+    &.is-color-disable {
+      color: var(--ti-color-disable);
+    }
+    &.is-color-text {
+      color: var(--ti-color-text);
+    }
+    &.is-color-number {
+      color: var(--ti-color-number);
+    }
+    //-----------------------------------------------------
+  }
+  //-------------------------------------------------------
 }
