feat(input): 新增经纬度输入组件 TiInputLatLng
- 添加经纬度输入组件及相关类型定义和样式
- 实现经纬度值的归一化处理和精度控制
- 在组件库入口文件中注册新组件
- 修复输入图标组件的样式问题

--- a/src/lib/input/icon/ti-input-icon.scss
+++ b/src/lib/input/icon/ti-input-icon.scss
@@ -1,4 +1,5 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
-.ti-tags {
+.ti-input-icon {
+  user-select: none;
 }
