style(颜色和表格): 调整颜色变量和表格样式
- 更新禁用状态和提示文本的颜色值
- 统一SCSS文件引用路径的引号风格
- 简化表格单元格选中状态的样式规则
- 为表格添加激活状态的背景色处理

--- a/src/lib/view/table/style/table-cell.scss
+++ b/src/lib/view/table/style/table-cell.scss
@@ -1,14 +1,14 @@
-@use '../../../../assets/style/_all.scss' as *;
+@use "../../../../assets/style/_all.scss" as *;
 
 .ti-table > main > .table-cell {
   display: grid;
   background-color: var(--ti-color-card);
   //background-color: blue;
   &.is-checked {
-    > .table-cell-wrapper {
-      color: var(--ti-color-selected-r);
-      background-color: var(--ti-color-selected);
-    }
+    //> .table-cell-wrapper {
+    color: var(--ti-color-selected-r);
+    background-color: var(--ti-color-selected);
+    //}
     &.is-actived.has-actived-com {
       > .table-cell-wrapper {
         color: var(--ti-color-box-f);
@@ -67,7 +67,7 @@
         &::before {
           width: 2px;
           display: block;
-          content: '';
+          content: "";
           background-color: var(--ti-color-mask-thin);
           transition: opacity 300ms;
           opacity: 0;
