--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: #888;
-  --ti-color-disable-b: #888;
-  --ti-color-disable-r: rgba(50, 50, 50, 0.1);
+  --ti-color-disable: #999;
+  --ti-color-disable-b: #aaa;
+  --ti-color-disable-r: #ddd;
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
@@ -63,5 +63,5 @@
   --ti-color-number-r: #cb9fec;
   --ti-color-tip: #222;
   --ti-color-tip-b: #333;
-  --ti-color-tip-r: #DDD;
+  --ti-color-tip-r: #ddd;
 }
