feat(table): 优化表格选择逻辑和样式
refactor(use-table): 重构选择逻辑，支持自定义选择状态变更检查
style(table-color): 调整选中行和单元格的样式
fix(table-types): 修正类型定义中的可选字段
perf(table): 优化性能，减少不必要的状态克隆
docs(ex-simple): 更新示例配置，增加行类型判断

--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -32,16 +32,16 @@
   --ti-color-dark: #b8b8b8;
   /* 内容颜色 */
   --ti-color-primary: #2196f3;
-  --ti-color-primary-b: #258bdf;
+  --ti-color-primary-b: #4aaeff;
   --ti-color-primary-r: #d0e7fc;
   --ti-color-secondary: #ff4081;
   --ti-color-secondary-b: #f86999;
   --ti-color-secondary-r: #ffdae6;
   --ti-color-success: #4caf50;
-  --ti-color-success-b: #56a358;
+  --ti-color-success-b: #6ec971;
   --ti-color-success-r: #cfc;
   --ti-color-warn: #ff8800;
-  --ti-color-warn-b: #ec8f23;
+  --ti-color-warn-b: #ff9823;
   --ti-color-warn-r: #ffc;
   --ti-color-info: #00bfbf;
   --ti-color-info-b: #15cece;
