--- a/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
+++ b/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
@@ -1,14 +1,34 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-edit-rich-prose {
-  @include flex-align-v-nowrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "menu menu"
+    "main props";
+  //-----------------------------------------------------
+  > header {
+    grid-area: menu;
+    background-color: pink;
+  }
+  //-----------------------------------------------------
   > article {
-    flex:1 1 auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    > .ProseMirror{
-      padding: 1em q;
+    grid-area: main;
+    background-color: yellow;
+    position: relative;
+    .ProseMirror {
+      position: absolute;
+      outline: none;
+      inset: 0;
+      white-space: pre-wrap;
+      padding: 1em;
     }
   }
+  //-----------------------------------------------------
+  > aside {
+    grid-area: props;
+    background-color: red;
+  }
+  //-----------------------------------------------------
 }
