--- a/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
+++ b/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
@@ -7,7 +7,7 @@
   grid-template-areas:
     "menu menu menu"
     "nav main props"
-    "nav foot foot";
+    "foot foot foot";
   //-----------------------------------------------------
   > header {
     grid-area: menu;
