--- a/src/lib/view/table/style/ti-table.scss
+++ b/src/lib/view/table/style/ti-table.scss
@@ -1,4 +1,4 @@
-@use '../../../../assets/style/_all.scss' as *;
+@use "../../../../assets/style/_all.scss" as *;
 
 .ti-table {
   > main {
@@ -17,4 +17,10 @@
       background-color: var(--ti-color-card);
     }
   } // ~ main
+}
+
+.ti-table {
+  --ti-color-disable: #888;
+  --ti-color-disable-b: #aaa;
+  --ti-color-disable-r: rgba(50, 50, 50, 0.1);
 }
