refactor(prose): 重构富文本编辑器相关组件和功能
- 删除旧的段落换行命令，改用新的硬换行命令
- 在编辑器底部添加光标位置显示
- 新增文档节点图标映射功能
- 优化列表组件样式和自动滚动逻辑
- 改进文档树节点显示和选择逻辑
- 调整编辑器布局和样式细节

--- a/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
+++ b/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
@@ -16,7 +16,7 @@
   //-----------------------------------------------------
   > nav {
     grid-area: nav;
-    background-color: #CCC;
+    background-color: #ccc;
   }
   //-----------------------------------------------------
   > article {
@@ -29,6 +29,7 @@
       inset: 0;
       white-space: pre-wrap;
       padding: 1em;
+      overflow: auto;
     }
   }
   //-----------------------------------------------------
@@ -39,7 +40,7 @@
   //-----------------------------------------------------
   > footer {
     grid-area: foot;
-    background-color: #CDF;
+    background-color: #cdf;
   }
   //-----------------------------------------------------
 }
